# checkdisks-c

./: .gitignore  configure.ac
src/: Makefile.am  blk_dev_info.c  blk_dev_info.h  info_manager.c  info_manager.h  main.c  output_fmt.c  output_fmt.h  pci_slot.c  pci_slot.h  scsi_host.c  scsi_host.h  scsi_target.c  scsi_target.h  sysfs_scan.c  sysfs_scan.h  udisks2.c  udisks2.h  utils.c  utils.h
